rectify comments and mistakes

--- a/housing.ipynb
+++ b/housing.ipynb
@@ -1950,7 +1950,7 @@
    "source": [
     "housing_ocean = train_data[[\"ocean_proximity\"]] # the double square brackets returns a pandas DataFrame\n",
     "                                                # a single bracket would have returned a pandas Series\n",
-    "                                                # but the fir_transform() method accepts DataFrame as its argument\n",
+    "                                                # but the fit_transform() method accepts DataFrame as its argument\n",
     "from sklearn.preprocessing import OrdinalEncoder\n",
     "ordinal_encoder = OrdinalEncoder()\n",
     "housing_ocean_encoded = ordinal_encoder.fit_transform(housing_ocean) # a one-D array is returned, pandas DataFrame is not returned\n",
@@ -2025,7 +2025,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
