prepare data for passing to model

--- a/housing.ipynb
+++ b/housing.ipynb
@@ -1630,7 +1630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 54,
    "id": "1f9301f9-ea95-4b73-8268-8479d99d89f9",
    "metadata": {},
    "outputs": [
@@ -1652,7 +1652,7 @@
        "Name: median_house_value, dtype: float64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1827,7 +1827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 57,
    "id": "dbf2a5fd-17cc-4bfb-986f-a1ef6667b379",
    "metadata": {},
    "outputs": [
@@ -2007,6 +2007,410 @@
    "source": [
     "one_hot_encoder.categories_"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "70e1d54d-c450-4a87-9945-8c25b96be555",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 1.],\n",
+       "       [1., 0., 0., 0., 0.],\n",
+       "       ...,\n",
+       "       [0., 0., 0., 1., 0.],\n",
+       "       [0., 1., 0., 0., 0.],\n",
+       "       [1., 0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing_ocean_1hot.toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "48601a13-be93-4f82-a8c3-f3f57aabd631",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ocean_proximity']"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#lsit() function extracts the column names from the pandas dataframe\n",
+    "num_attributes = list(housing_tr) #extracting the numerical attribute name from the dataset\n",
+    "cat_attributes = list(housing_ocean) #extracting the categorical attribute name from the dataset\n",
+    "cat_attributes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "81c84cbd-8ecd-4b02-ac4c-8162ae715ba4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>housing_median_age</th>\n",
+       "      <th>total_rooms</th>\n",
+       "      <th>total_bedrooms</th>\n",
+       "      <th>population</th>\n",
+       "      <th>households</th>\n",
+       "      <th>median_income</th>\n",
+       "      <th>ocean_proximity</th>\n",
+       "      <th>rooms_per_household</th>\n",
+       "      <th>population_per_household</th>\n",
+       "      <th>bedrooms_per_room</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>17262</th>\n",
+       "      <td>-119.71</td>\n",
+       "      <td>34.42</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>1411.0</td>\n",
+       "      <td>324.0</td>\n",
+       "      <td>1091.0</td>\n",
+       "      <td>306.0</td>\n",
+       "      <td>4.1062</td>\n",
+       "      <td>&lt;1H OCEAN</td>\n",
+       "      <td>4.611111</td>\n",
+       "      <td>3.565359</td>\n",
+       "      <td>0.229624</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16799</th>\n",
+       "      <td>-122.44</td>\n",
+       "      <td>37.67</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>1814.0</td>\n",
+       "      <td>365.0</td>\n",
+       "      <td>1025.0</td>\n",
+       "      <td>384.0</td>\n",
+       "      <td>4.4250</td>\n",
+       "      <td>NEAR OCEAN</td>\n",
+       "      <td>4.723958</td>\n",
+       "      <td>2.669271</td>\n",
+       "      <td>0.201213</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16718</th>\n",
+       "      <td>-120.66</td>\n",
+       "      <td>35.49</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>4422.0</td>\n",
+       "      <td>945.0</td>\n",
+       "      <td>2307.0</td>\n",
+       "      <td>885.0</td>\n",
+       "      <td>2.8285</td>\n",
+       "      <td>&lt;1H OCEAN</td>\n",
+       "      <td>4.996610</td>\n",
+       "      <td>2.606780</td>\n",
+       "      <td>0.213704</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5373</th>\n",
+       "      <td>-118.38</td>\n",
+       "      <td>34.04</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>3005.0</td>\n",
+       "      <td>771.0</td>\n",
+       "      <td>2054.0</td>\n",
+       "      <td>758.0</td>\n",
+       "      <td>2.0437</td>\n",
+       "      <td>&lt;1H OCEAN</td>\n",
+       "      <td>3.964380</td>\n",
+       "      <td>2.709763</td>\n",
+       "      <td>0.256572</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20311</th>\n",
+       "      <td>-119.11</td>\n",
+       "      <td>34.17</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>470.0</td>\n",
+       "      <td>105.0</td>\n",
+       "      <td>522.0</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>2.0368</td>\n",
+       "      <td>NEAR OCEAN</td>\n",
+       "      <td>5.662651</td>\n",
+       "      <td>6.289157</td>\n",
+       "      <td>0.223404</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13893</th>\n",
+       "      <td>-116.31</td>\n",
+       "      <td>34.13</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>2352.0</td>\n",
+       "      <td>556.0</td>\n",
+       "      <td>1217.0</td>\n",
+       "      <td>481.0</td>\n",
+       "      <td>1.6063</td>\n",
+       "      <td>INLAND</td>\n",
+       "      <td>4.889813</td>\n",
+       "      <td>2.530146</td>\n",
+       "      <td>0.236395</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20015</th>\n",
+       "      <td>-119.08</td>\n",
+       "      <td>36.09</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>1880.0</td>\n",
+       "      <td>339.0</td>\n",
+       "      <td>1003.0</td>\n",
+       "      <td>315.0</td>\n",
+       "      <td>2.7298</td>\n",
+       "      <td>INLAND</td>\n",
+       "      <td>5.968254</td>\n",
+       "      <td>3.184127</td>\n",
+       "      <td>0.180319</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18879</th>\n",
+       "      <td>-122.26</td>\n",
+       "      <td>38.10</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>1213.0</td>\n",
+       "      <td>395.0</td>\n",
+       "      <td>699.0</td>\n",
+       "      <td>386.0</td>\n",
+       "      <td>1.3007</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "      <td>3.142487</td>\n",
+       "      <td>1.810881</td>\n",
+       "      <td>0.325639</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19612</th>\n",
+       "      <td>-121.11</td>\n",
+       "      <td>37.47</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>2263.0</td>\n",
+       "      <td>410.0</td>\n",
+       "      <td>913.0</td>\n",
+       "      <td>330.0</td>\n",
+       "      <td>3.5795</td>\n",
+       "      <td>INLAND</td>\n",
+       "      <td>6.857576</td>\n",
+       "      <td>2.766667</td>\n",
+       "      <td>0.181175</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4624</th>\n",
+       "      <td>-118.32</td>\n",
+       "      <td>34.06</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>983.0</td>\n",
+       "      <td>246.0</td>\n",
+       "      <td>578.0</td>\n",
+       "      <td>204.0</td>\n",
+       "      <td>5.7393</td>\n",
+       "      <td>&lt;1H OCEAN</td>\n",
+       "      <td>4.818627</td>\n",
+       "      <td>2.833333</td>\n",
+       "      <td>0.250254</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>16512 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       longitude  latitude  housing_median_age  total_rooms  total_bedrooms  \\\n",
+       "17262    -119.71     34.42                52.0       1411.0           324.0   \n",
+       "16799    -122.44     37.67                35.0       1814.0           365.0   \n",
+       "16718    -120.66     35.49                17.0       4422.0           945.0   \n",
+       "5373     -118.38     34.04                36.0       3005.0           771.0   \n",
+       "20311    -119.11     34.17                37.0        470.0           105.0   \n",
+       "...          ...       ...                 ...          ...             ...   \n",
+       "13893    -116.31     34.13                20.0       2352.0           556.0   \n",
+       "20015    -119.08     36.09                25.0       1880.0           339.0   \n",
+       "18879    -122.26     38.10                24.0       1213.0           395.0   \n",
+       "19612    -121.11     37.47                12.0       2263.0           410.0   \n",
+       "4624     -118.32     34.06                52.0        983.0           246.0   \n",
+       "\n",
+       "       population  households  median_income ocean_proximity  \\\n",
+       "17262      1091.0       306.0         4.1062       <1H OCEAN   \n",
+       "16799      1025.0       384.0         4.4250      NEAR OCEAN   \n",
+       "16718      2307.0       885.0         2.8285       <1H OCEAN   \n",
+       "5373       2054.0       758.0         2.0437       <1H OCEAN   \n",
+       "20311       522.0        83.0         2.0368      NEAR OCEAN   \n",
+       "...           ...         ...            ...             ...   \n",
+       "13893      1217.0       481.0         1.6063          INLAND   \n",
+       "20015      1003.0       315.0         2.7298          INLAND   \n",
+       "18879       699.0       386.0         1.3007        NEAR BAY   \n",
+       "19612       913.0       330.0         3.5795          INLAND   \n",
+       "4624        578.0       204.0         5.7393       <1H OCEAN   \n",
+       "\n",
+       "       rooms_per_household  population_per_household  bedrooms_per_room  \n",
+       "17262             4.611111                  3.565359           0.229624  \n",
+       "16799             4.723958                  2.669271           0.201213  \n",
+       "16718             4.996610                  2.606780           0.213704  \n",
+       "5373              3.964380                  2.709763           0.256572  \n",
+       "20311             5.662651                  6.289157           0.223404  \n",
+       "...                    ...                       ...                ...  \n",
+       "13893             4.889813                  2.530146           0.236395  \n",
+       "20015             5.968254                  3.184127           0.180319  \n",
+       "18879             3.142487                  1.810881           0.325639  \n",
+       "19612             6.857576                  2.766667           0.181175  \n",
+       "4624              4.818627                  2.833333           0.250254  \n",
+       "\n",
+       "[16512 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data[\"rooms_per_household\"] = train_data[\"total_rooms\"] / train_data[\"households\"]\n",
+    "train_data[\"population_per_household\"] = train_data[\"population\"] / train_data[\"households\"]\n",
+    "train_data[\"bedrooms_per_room\"] = train_data[\"total_bedrooms\"] / train_data[\"total_rooms\"]\n",
+    "train_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "387aefcb-3677-4b50-b46e-89f8263a84cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "numerical_pipeline = Pipeline([\n",
+    "    ('imputer', SimpleImputer(strategy=\"median\")),\n",
+    "    ('std_scaler', StandardScaler()),\n",
+    "])\n",
+    "train_data_without_ocean = train_data.drop(\"ocean_proximity\", axis = 1)\n",
+    "num_attributes = list(train_data_without_ocean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "f2df9476-a88c-4855-b5b3-867409aa98d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.06764406, -0.57094951,  1.85663063, ...,  0.        ,\n",
+       "         0.        ,  0.        ],\n",
+       "       [-1.43149467,  0.95093743,  0.50408653, ...,  0.        ,\n",
+       "         0.        ,  1.        ],\n",
+       "       [-0.54224409, -0.0698975 , -0.92801899, ...,  0.        ,\n",
+       "         0.        ,  0.        ],\n",
+       "       ...,\n",
+       "       [-1.34157046,  1.15229477, -0.37108906, ...,  0.        ,\n",
+       "         1.        ,  0.        ],\n",
+       "       [-0.76705463,  0.85728285, -1.32582607, ...,  0.        ,\n",
+       "         0.        ,  0.        ],\n",
+       "       [ 0.62677072, -0.73952775,  1.85663063, ...,  0.        ,\n",
+       "         0.        ,  0.        ]])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.compose import ColumnTransformer\n",
+    "full_pipeline = ColumnTransformer([\n",
+    "     (\"num\", numerical_pipeline, num_attributes),\n",
+    "     (\"cat\", OneHotEncoder(), cat_attributes),\n",
+    "])\n",
+    "housing_prepared = full_pipeline.fit_transform(train_data)\n",
+    "housing_prepared"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "362a1cb1-a06e-4bde-84ec-e032dc75b56c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(16512, 16)"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing_prepared.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9691504-7ca8-4f8c-94dc-ce88eeb959c5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
