--- a/housing.ipynb
+++ b/housing.ipynb
@@ -5789,6 +5789,27 @@
     "final_rmse4 = np.sqrt(final_mse4)\n",
     "print(\"the root mean squared error for decision trees is: \", final_rmse4)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 250,
+   "id": "6246f7a8-96f0-4e5c-94c1-eb2b21cce2ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['final_model_random_forest.pkl']"
+      ]
+     },
+     "execution_count": 250,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(final_model2, \"final_model_random_forest.pkl\")"
+   ]
   }
  ],
  "metadata": {
